--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 body {
     font-family: 'Inter', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-image: url('Portfolio-Images/Colorful-Neon-Hexagons\ copy\ 2.jpg');
+    background-image: url('Portfolio-Images/Colorful-Neon-Hexagons.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
